[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.5.0"
bevy = "0.18.1"
rand = "0.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
